--- a/onward/app/views/weatherFragments/cityWeather.scala.html
+++ b/onward/app/views/weatherFragments/cityWeather.scala.html
@@ -2,9 +2,22 @@
 
 @import common.Edition
 
-
 <div class="weather js-weather">
-    <div class="u-unstyled weather__current js-weather-current">
+    <div class="weather__location">
+        <div class="search-tool js-search-tool">
+            <div class="search-tool__form u-cf">
+                <label class="u-h" for="editlocation">Edit your location</label>
+                <input id="editlocation" class="search-tool__input js-search-tool-input" type="text" data-link-name="weather-edit-location" value="<%=city%>" aria-label="enter location" />
+                <span class="weather__edit-location js-edit-location">change</span>
+                <button class="search-tool__btn">@fragments.inlineSvg("search-36", "icon")<span class="u-h">Search for city</span></button>
+            </div>
+            <ul class="u-unstyled search-tool__list js-search-tool-list"></ul>
+        </div>
+        <button class="weather__close-location js-close-location meta-button u-h" data-link-name="weather-close-location"
+        href="#close-change-location" aria-label="stop editing location"><span class="u-h">Close change location</span> @fragments.inlineSvg("close", "icon", List("weather__close-icon"))
+        </button>
+    </div>
+    <div class="u-unstyled weather__current js-weather-current forecast__item">
         @fragments.inlineSvg(s"weather-${weatherResponse.WeatherIcon}", "weather", Seq("weather__icon","js-weather-icon"), Some(weatherResponse.WeatherText))<span class="u-h">@weatherResponse.WeatherText</span>
         <p class="weather__desc">
             <span class="u-h">The temperature</span>
@@ -19,18 +32,4 @@
     href="#toggle-forecast"><span class="u-h">Toggle forecast</span>@fragments.inlineSvg("arrow", "icon", List("weather__toggle-icon"))
     </button>
     <ul class="js-weather-forecast forecast"></ul>
-    <div class="weather__location">
-        <div class="search-tool js-search-tool">
-            <div class="search-tool__form u-cf">
-                <label class="u-h" for="editlocation">Edit your location</label>
-                <input id="editlocation" class="search-tool__input js-search-tool-input" type="text" data-link-name="weather-edit-location" value="<%=city%>" aria-label="enter location" />
-                @fragments.inlineSvg("search-36", "icon", List("weather__search-icon", "weather__edit-location", "js-edit-location"))
-                <button class="search-tool__btn">@fragments.inlineSvg("search-36", "icon")<span class="u-h">Search for city</span></button>
-            </div>
-            <ul class="u-unstyled search-tool__list js-search-tool-list"></ul>
-        </div>
-        <button class="weather__close-location js-close-location meta-button u-h" data-link-name="weather-close-location"
-        href="#close-change-location" aria-label="stop editing location"><span class="u-h">Close change location</span> @fragments.inlineSvg("close", "icon", List("weather__close-icon"))
-        </button>
-    </div>
 </div>
