--- a/static/src/stylesheets/module/_weather.scss
+++ b/static/src/stylesheets/module/_weather.scss
@@ -1,130 +1,101 @@
 $weather-small-size: 26px;
-$weather-large-size: 60px;
-
-@mixin weather-rule() {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: $gs-baseline / 2;
-    height: $gs-baseline + 1px;
-    border-right: 1px dotted $neutral-3;
-}
+$weather-large-size: 45px;
 
 .weather {
+    @include f-textSans;
+    line-height: 1;
     position: relative;
     color: $neutral-1;
-    text-align: right;
-    padding-top: $gs-baseline / 6;
-
-    @include mq(tablet) {
-        padding-top: ($gs-baseline / 3) * 2;
-    }
+    display: flex;
+    justify-content: flex-end;
 
     @include mq(leftCol) {
-        padding-top: $gs-baseline;
-        text-align: left;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-top: 0;
+        padding-top: $gs-baseline * 2;
     }
 
     .has-page-skin & {
         @include mq(wide) {
-            padding-top: ($gs-baseline / 3) * 2;
-            text-align: right;
+            // padding-top: ($gs-baseline / 3) * 2;
         }
     }
-}
-
-.weather__current,
-.forecast,
-.weather__location {
-    position: relative;
-    display: inline-block;
-    text-align: left;
 }
 
 .weather__current {
-    @include mq($until: tablet) {
-        margin-right: $gs-gutter * 1.25;
+    margin-left: $gs-gutter / 2;
+    position: relative;
+
+    @include mq(leftCol) {
+        margin: ($gs-baseline / 2) 0 $gs-baseline;
+        width: 100%;
     }
+
+    .weather__icon {
+        @include mq(leftCol) {
+            float: left;
+            padding: 0 ($gs-gutter / 2) 0 0;
+
+            svg {
+                width: $weather-large-size;
+                height: $weather-large-size;
+                display: block;
+            }
+        }
+    }
+
+    .weather__temp {
+        @include mq(leftCol) {
+            font-size: 24px;
+            line-height: 1.3;
+        }
+    }
+}
+
+.weather__icon {
+    display: block;
+    padding: ($gs-baseline / 4) 0;
 
     @include mq($until: leftCol) {
-        padding-right: $gs-gutter / 2;
-        text-align: right;
-
-        &:after {
-            @include weather-rule;
-        }
-    }
-
-    @include mq(tablet, leftCol) {
-        text-align: left;
-    }
-
-    .has-page-skin & {
-        @include mq(wide) {
-            padding-right: $gs-gutter / 2;
-            text-align: left;
-
-            &:after {
-                @include weather-rule;
-            }
-
-            .weather__icon {
-                right: $gs-gutter / 4;
-            }
-        }
-    }
-
-    .weather__desc {
-        @include mq(leftCol) {
-            position: absolute;
-            bottom: $gs-baseline;
-        }
-
-        .has-page-skin & {
-            @include mq(wide) {
-                position: static;
-            }
-        }
-    }
-}
-
-.weather__desc {
-    @include fs-headline(2);
-    display: inline-block;
-    margin: 0;
-}
-
-.weather__time {
-    @include fs-textSans(1);
-    display: none;
-    color: $neutral-2;
-
-    @include mq(tablet) {
-        display: block;
+        position: absolute;
+        left: $gs-gutter / 4;
+        top: 0;
     }
 }
 
 .weather__icon svg {
     width: $weather-small-size;
     height: $weather-small-size;
-    margin: -($gs-baseline / 3) 0 0;
     vertical-align: middle;
-
-    @include mq(leftCol) {
-        width: $weather-large-size;
-        height: $weather-large-size;
-        display: block;
-        margin: 0 auto ($gs-baseline / 4) ($gs-gutter * 2);
-    }
 
     .has-page-skin & {
         @include mq(wide) {
-            width: $weather-small-size;
-            height: $weather-small-size;
-            display: inline-block;
-            margin: -($gs-baseline / 3) 0 0;
+            // width: $weather-small-size;
+            // height: $weather-small-size;
+            // display: inline-block;
+            // margin: -($gs-baseline / 3) 0 0;
         }
     }
+}
+
+.weather__time {
+    display: none;
+    color: $neutral-2;
+    font-size: 12px;
+
+    @include mq(tablet) {
+        display: inline-block;
+    }
+
+    @include mq(leftCol) {
+        display: block;
+    }
+}
+
+.weather__temp {
+    font-size: 16px;
+    display: block;
 }
 
 .weather__toggle-forecast {
@@ -159,11 +130,11 @@ $weather-large-size: 60px;
 
 .weather__location {
     width: 100%;
-    border-top: 1px dotted $neutral-3;
+    position: relative;
 
     @include mq($until: tablet) {
         display: none;
-        padding: ($gs-baseline / 6) 0;
+        padding: ($gs-baseline / 6) 0 0;
 
         .is-expanded & {
             display: inline-block;
@@ -171,32 +142,36 @@ $weather-large-size: 60px;
     }
 
     @include mq(tablet, leftCol) {
-        width: gs-span(2);
-        border-top-color: transparent;
+        margin-top: 12px;
+        width: gs-span(3);
     }
 
     @include mq(leftCol) {
-        padding-top: $gs-baseline / 6;
-    }
-
-    @include mq(wide) {
-        width: 90%;
+        line-height: 32px;
     }
 
     .has-page-skin & {
         @include mq(wide) {
             width: gs-span(2);
-            border-top-color: transparent;
             padding-top: 0;
         }
     }
 
     .search-tool__input {
-        @include fs-headline(2);
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
         width: 100%;
         display: inline-block;
-        padding-right: $gs-gutter;
+        padding-bottom: $gs-baseline / 2;
+        padding-right: $gs-gutter * 2;
         box-sizing: border-box;
+        border-bottom: 1px solid $neutral-4;
+
+        &:focus {
+            border-color: $news-main-2;
+            padding-right: $gs-gutter;
+        }
     }
 
     .search-tool__btn {
@@ -204,7 +179,7 @@ $weather-large-size: 60px;
     }
 
     .search-tool__list {
-        text-align: left;
+        box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, .25);
 
         @include mq($until: tablet) {
             position: static;
@@ -230,7 +205,6 @@ $weather-large-size: 60px;
     }
 }
 
-.weather__search-icon,
 .weather__close-icon {
     width: 16px;
     height: 16px;
@@ -239,92 +213,89 @@ $weather-large-size: 60px;
 
 .weather__edit-location {
     z-index: 0;
+    color: $guardian-brand;
+    font-size: 12px;
+    top: 2px;
 }
 
 .forecast {
     margin: 0;
-    padding: ($gs-baseline / 3) 0 ($gs-baseline / 2);
     list-style: none;
-    width: 100%;
+    display: flex;
 
     @include mq($until: tablet) {
         display: none;
 
         .is-expanded & {
-            display: table;
+            display: flex;
         }
     }
 
-    @include mq(tablet, leftCol) {
-        padding: 0;
-        width: auto;
-    }
-
     @include mq(leftCol) {
-        display: table;
-        padding-top: 0;
+        border-top: 1px solid $neutral-4;
     }
 
-    @include mq(wide) {
-        width: 90%;
-    }
-
-    .has-page-skin & {
-        @include mq(wide) {
-            width: auto;
-            display: inline-block;
+    .forecast__item {
+        @include mq(leftCol) {
+            padding: ($gs-baseline / 2) 0 0 ($gs-gutter / 4);
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
         }
     }
 }
 
 .forecast__item {
+    box-sizing: border-box;
     position: relative;
-    display: table-cell;
-    border-left: 1px dotted $neutral-3;
     padding: 0 ($gs-gutter / 2) 0 ($gs-gutter / 4);
+    // width: 85px;
 
-    @include mq(tablet, leftCol) {
-        border-left: 0;
-        display: inline-block;
+    @include mq(desktop, leftCol) {
+        // width: 115px;
+    }
 
-        &:after {
-            @include weather-rule;
+    @include mq($until: leftCol) {
+        min-height: $weather-small-size;
+        padding-left: $weather-small-size + ($gs-gutter / 2);
+        padding-right: $gs-gutter;
+    }
+
+    &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: -$gs-baseline / 2;
+        bottom: 0;
+        border-left: 1px solid $neutral-4;
+
+        @include mq(leftCol) {
+            top: 0;
         }
     }
 
-    @include mq(leftCol) {
-        padding-right: 0;
-    }
+    &.forecast__item--0,
+    &.weather__current {
+        @include mq(leftCol) {
+            padding-left: 0;
 
-    @include mq(leftCol, wide) {
-        width: 33%;
-    }
-
-    .has-page-skin & {
-        @include mq(wide) {
-            display: inline-block;
-            border-left: 0;
-            padding-right: $gs-gutter / 2;
-
-            &:after {
-                @include weather-rule;
+            &:before {
+                content: none;
             }
         }
     }
 
-    &.forecast__item--0 {
-        border-left: 0;
-        padding-left: 0;
+    &.forecast__item--1 {
+        @include mq($until: leftCol) {
+            padding-right: 0;
+        }
     }
 
     &.forecast__item--2 {
-        @include mq(tablet, desktop) {
+        @include mq(tablet, leftCol) {
             display: none;
         }
 
-        @include mq(leftCol, wide) {
-            border-right: 0;
-        }
     }
 
     &.forecast__item--3 {
@@ -334,31 +305,8 @@ $weather-large-size: 60px;
     }
 
     .weather__time {
-        display: block;
-    }
-
-    .weather__icon {
-        display: inline-block;
-        vertical-align: bottom;
-    }
-
-    .weather__icon svg {
-        display: block;
-
-        @include mq(mobileLandscape, leftCol) {
-            display: inline-block;
-        }
-
         @include mq(leftCol) {
-            width: $weather-small-size;
-            height: $weather-small-size;
-            margin-left: 0;
-        }
-
-        .has-page-skin & {
-            @include mq(wide) {
-                display: inline-block;
-            }
+            order: -1;
         }
     }
 }
