--- a/static/src/stylesheets/layout/new-header/_pillar-link.scss
+++ b/static/src/stylesheets/layout/new-header/_pillar-link.scss
@@ -1,35 +1,57 @@
+.l-side-margins {
+    &:before,
+    &:after {
+        top: -50px !important;
+    }
+}
+
 .pillar-link {
     @include fs-textSans(5);
+    border-bottom: 0 solid $news-main-2;
     box-sizing: border-box;
     color: currentColor;
     cursor: pointer;
-    display: block;
+    display: inline-block;
     font-size: 16px;
-    font-size: 4.9vw;
-    line-height: $gs-baseline * 2.5;
+    height: $veggie-burger-small - ($gs-baseline / 2);
+    line-height: $veggie-burger-small - ($gs-baseline / 2);
+    padding: 0 ($gs-gutter / 4);
     position: relative;
-    transition: color 350ms;
+    transition: color 150ms ease-out, border 150ms ease-out;
 
     @include mq(mobileMedium) {
-        line-height: $gs-baseline * 3;
-    }
-
-    @include mq(mobileLandscape) {
-        font-size: 24px;
-        line-height: $gs-baseline * 3.5;
-    }
-
-    @include mq(tablet) {
-        font-size: 28px;
-        letter-spacing: -.04rem;
+        font-size: 18px;
+        height: $veggie-burger-medium - $gs-baseline;
+        line-height: $veggie-burger-medium - $gs-baseline;
     }
 
     @include mq(desktop) {
-        font-size: 32px;
+        font-size: 22px;
+        height: $gs-baseline * 5;
+        letter-spacing: -.04rem;
+        line-height: $gs-baseline * 5;
+        padding: 0 0 0 $gs-gutter / 2;
+        width: gs-span(1) + $gs-gutter * 2 + $gs-gutter / 2;
+    }
+
+    &:before {
+        border-left: 1px solid $news-support-2;
+        bottom: -3px;
+        content: '';
+        display: block;
+        left: 0;
+        position: absolute;
+        top: $gs-baseline;
+
+        @include mq(desktop) {
+            bottom: -6px;
+            top: $gs-baseline * 2;
+        }
     }
 
     &:focus,
     &:hover {
+        border-bottom-width: 4px;
         color: #ffffff;
         outline: none;
         text-decoration: none;
@@ -43,9 +65,13 @@
 }
 
 .pillar-link--current-section {
+    border-bottom-width: 3px;
     color: #ffffff;
+    font-weight: 700;
 
     @include mq(desktop) {
+        border-bottom-width: 4px;
+
         .new-header--open & {
             color: $news-support-1;
 
@@ -56,22 +82,24 @@
             }
         }
     }
+}
 
-    // triangle
-    &:before {
+.pillar-link--dropdown {
+    &:after {
+        border: 2px solid currentColor;
+        border-left: transparent;
+        border-top: transparent;
         content: '';
-        position: absolute;
-        left: 50%;
-        bottom: 0;
-        transform: translateX(-100%);
-        border-bottom: $gs-baseline / 2 solid $subnav-grey;
-        border-left: $gs-baseline / 2 solid transparent;
-        border-right: $gs-baseline / 2 solid transparent;
+        display: inline-block;
+        height: 6px;
+        margin-left: 2px;
+        transform: translateY(-2px) rotate(45deg);
+        transition: transform 250ms ease-out;
+        vertical-align: middle;
+        width: 6px;
+    }
 
-        @include mq(desktop) {
-            .new-header--open & {
-                display: none;
-            }
-        }
+    &:hover:after {
+        transform: translateY(0) rotate(45deg);
     }
 }
