--- a/static/src/stylesheets/amp/header/_veggie-burger.scss
+++ b/static/src/stylesheets/amp/header/_veggie-burger.scss
@@ -15,7 +15,6 @@
     @include mq(mobileMedium) {
         height: $veggie-burger-medium;
         width: $veggie-burger-medium;
-        //Align with the 'i' in 'theguardian'
         right: $gutter-medium;
     }
 }
@@ -38,10 +37,10 @@
     }
 
     &:before {
-        top: -$gs-gutter / 4;
+        top: -$gs-baseline / 2 + 1;
     }
 
     &:after {
-        bottom: -$gs-gutter / 4;
+        bottom: -$gs-baseline / 2 + 1;
     }
 }
