--- a/static/src/stylesheets/layout/new-header/_new-header.scss
+++ b/static/src/stylesheets/layout/new-header/_new-header.scss
@@ -101,7 +101,7 @@ from scrolling */
 .new-header__logo__svg {
     display: block;
     height: calc(3 / 16 * 170px);
-    margin-bottom: $gs-baseline / 2;
+    margin-bottom: $gs-baseline;
     margin-right: $gs-gutter / 2;
     margin-top: $gs-baseline / 2;
     width: 170px;
@@ -109,6 +109,7 @@ from scrolling */
     @include mq(mobileMedium) {
         height: calc(3 / 16 * 225px);
         width: 225px;
+        margin-bottom: $gs-baseline / 2;
     }
 
     @include mq(mobileLandscape) {
@@ -127,7 +128,7 @@ from scrolling */
 
     @include mq(leftCol) {
         height: calc(3 / 16 * 385px);
-        margin-bottom: -1px;
+        margin-bottom: -24px;
         width: 385px;
     }
 
