--- a/static/src/stylesheets/module/facia-pc/_pillars.scss
+++ b/static/src/stylesheets/module/facia-pc/_pillars.scss
@@ -21,8 +21,7 @@ $pillars: (
     }
 
     .fc-item__kicker {
-        color: #fff;
-        background-color: $accent;
+        color: $accent;
     }
 
     .fc-item__standfirst {
