--- a/static/src/stylesheets/module/facia-pc/_pillars.scss
+++ b/static/src/stylesheets/module/facia-pc/_pillars.scss
@@ -33,7 +33,11 @@ $pillars: (
     }
 
     .inline-icon {
-        fill: $accent;
+        fill: $foreground;
+    }
+
+    .fc-item__meta {
+        color: $foreground;
     }
 
     .fc-item__container {
