--- a/static/src/stylesheets/head.facia.pc.scss
+++ b/static/src/stylesheets/head.facia.pc.scss
@@ -11,6 +11,7 @@
 @import 'module/facia/_container';
 @import 'module/facia/_containers';
 @import 'module/facia-pc/_slices';
+@import 'module/facia-pc/_sublinks';
 @import 'module/facia-pc/_item';
 @import 'module/facia-pc/_items';
 @import 'module/facia-pc/_pillars';
