--- a/static/src/stylesheets/module/facia-pc/_item.scss
+++ b/static/src/stylesheets/module/facia-pc/_item.scss
@@ -18,48 +18,35 @@ $fc-item-gutter: $gs-gutter / 4;
 
         > * {
             box-sizing: border-box;
-            padding-right: $gs-gutter * .75;
+            padding-right: $gs-gutter * .5;
         }
     }
 
-    .has-flex-wrap & {
-        .fc-item__container {
-            flex-wrap: wrap;
-            @if $media-align == right {
-                flex-direction: row-reverse;
-            } @else {
-                flex-direction: row;
-            }
-        }
-
-        .fc-item__media-wrapper {
-            flex-basis: $media-width;
-        }
-
-        .fc-item__video-fallback {
-            flex-basis: $media-width;
-        }
-
-        .fc-item__content {
-            flex-basis: (100% - $media-width);
-            // DAMN YOU IE10/11 FLEXWRAP BOX SIZING BUG
-            max-width: (100% - $media-width);
-        }
-
-        .fc-item__footer--horizontal {
-            flex-basis: 100%;
+    .fc-item__container {
+        flex-wrap: wrap;
+        @if $media-align == right {
+            flex-direction: row-reverse;
+        } @else {
+            flex-direction: row;
         }
     }
 
-    .has-no-flex-wrap & {
-        .fc-item__media-wrapper {
-            width: $media-width;
-            float: $media-align;
-        }
+    .fc-item__media-wrapper {
+        flex-basis: $media-width;
+    }
 
-        .fc-item__content {
-            width: 100% - $media-width;
-        }
+    .fc-item__video-fallback {
+        flex-basis: $media-width;
+    }
+
+    .fc-item__content {
+        flex-basis: (100% - $media-width);
+        // DAMN YOU IE10/11 FLEXWRAP BOX SIZING BUG
+        max-width: (100% - $media-width);
+    }
+
+    .fc-item__footer--horizontal {
+        flex-basis: 100%;
     }
 
     &.fc-item--has-no-image .fc-item__content {
@@ -75,13 +62,8 @@ $fc-item-gutter: $gs-gutter / 4;
     }
 
     @include mq(tablet) {
-        .has-flex & {
-            flex: 1 1 auto;
-        }
-
-        .has-flex-wrap & {
-            display: flex;
-        }
+        flex: 1 1 auto;
+        display: flex;
     }
 
     @include mq($until: tablet) {
@@ -96,11 +78,59 @@ $fc-item-gutter: $gs-gutter / 4;
         margin-left: $gs-gutter * .5;
         margin-right: $gs-gutter * .5;
     }
-}
 
-.item,
-.fc-item {
-    
+    a {
+        // this is a fallback for browsers that don't support inherit
+        color: $neutral-1;
+        color: inherit;
+    }
+
+    .u-faux-block-link & a,
+    .u-faux-block-link & abbr[title],
+    .u-faux-block-link__promote {
+        &.fc-item__link {
+            z-index: 0;
+        }
+
+        @include mq($until: desktop) {
+            z-index: initial;
+        }
+    }
+
+    /**
+     * The z-index: initial trick above is not working on the webkit browsers.
+     * The only way how to make it work is to play with the z-index.
+     */
+    &.fc-item--video {
+        .u-faux-block-link__overlay {
+            z-index: 0;
+        }
+
+        .u-faux-block-link__promote {
+            z-index: 1;
+        }
+    }
+
+    .u-faux-block-link--hover,
+    .fc-item__image-container {
+        background-color: $neutral-6;
+
+        .fc-slice--nav-list--media & {
+            background-color: inherit;
+        }
+    }
+
+    .u-faux-block-link--hover {
+        .youtube-media-atom,
+        .fc-item__image-container {
+            background-color: #000000;
+            opacity: .9;
+        }
+
+        .u-faux-block-link__cta {
+            text-decoration: none;
+        }
+    }
 }
 
 .fc-item__container {
@@ -117,7 +147,6 @@ $fc-item-gutter: $gs-gutter / 4;
         right: 0;
         height: 1px;
         z-index: 2;
-        // background-color: red;
     }
 }
 
@@ -129,6 +158,13 @@ $fc-item-gutter: $gs-gutter / 4;
 // Wraps all non-media content
 .fc-item__content {
     box-sizing: border-box;
+    flex: 1 1 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.fc-item__content,
+.fc-item__footer--horizontal {
     padding-left: $fc-item-gutter;
     padding-right: $fc-item-gutter;
 }
@@ -166,6 +202,21 @@ $fc-item-gutter: $gs-gutter / 4;
     }
 }
 
+.fc-item__title--quoted {
+}
+
+.fc-item__kicker,
+.fc-sublink__kicker,
+.rich-link__kicker {
+    &:hover:after {
+        text-decoration: none;
+    }
+}
+
+.fc-item__header {
+    flex: 1 1 auto;
+}
+
 .fc-item__byline {
     margin-bottom: 0;
 }
@@ -175,8 +226,57 @@ $fc-item-gutter: $gs-gutter / 4;
     padding-bottom: .5em;
     color: $neutral-2;
     display: none;
+    flex: 1;
+    flex-direction: column;
+    justify-content: flex-end;
 
     .fc-item--has-boosted-title & {
         display: none !important;
     }
+}
+
+.fc-item__link {
+    &:hover,
+    &:focus {
+        text-decoration: none;
+    }
+}
+
+.fc-item__meta {
+    @include fs-textSans(1);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: .5rem;
+    color: $neutral-2;
+
+    .inline-icon {
+        fill: $neutral-3;
+    }
+
+    a, button {
+        // make sure meta links always clickable,
+        // even on mobile/tablet
+        z-index: 1 !important;
+    }
+}
+
+.fc-trail__count .inline-icon {
+    width: 16px;
+    height: 16px;
+    position: relative;
+    top: 3px;
+    float: left;
+    margin-right: 1px;
+}
+
+.fc-trail__count--inline-template {
+    display: none;
+}
+
+.fc-item__footer--vertical {
+}
+
+.fc-item__footer--horizontal {
+    display: none;
 }
