--- a/static/src/stylesheets/layout/new-header/_pillars.scss
+++ b/static/src/stylesheets/layout/new-header/_pillars.scss
@@ -6,7 +6,6 @@
     list-style: none;
     margin: 0;
     padding: 0 $gs-gutter / 2;
-    width: 100%;
     transition: color 80ms ease-out;
 
     &:hover {
@@ -14,7 +13,7 @@
     }
 
     @include mq(mobileLandscape) {
-        padding: 0 $gs-gutter;
+        padding: 0 0 0 $gs-gutter;
     }
 
     @include mq(desktop) {
